# UltralightMinimalApp

./: .gitignore  CMakeLists.txt
assets/: index.html
src/: App.cpp  App.hpp  macros.h  main.cpp
